# portfolio

./: .gitignore  README.md  portfolio.odp  portfolio.pptx
_resources/: stati_site_chat_password.txt
_work/: david.pptx
ai/: ai.pptx
architecture/: architecture.pptx  clean_architecture_python.odp
authentication/: authentication.odp  authentication.pptx
authentication/_projects/sign_in_python/: README.md  client_credentials.py  code_flow.py  generate_token.py  pyproject.toml
aws/: aws.odp
azure/: azure.odp  azure.pptx
celery/: celery.pptx
clean/: clean.odp
contasimple/: README.md
cursor/: cursor.pptx
devops/: devops.pptx
docker/: README.md  docker.odp
drawIO/: drawai.drawio
events/: events.odp
foundry/: foundry - Copy.odp  foundry.odp
git/: README.md  git - Copy - Copy.odp  git.odp  github-recovery-codes.txt  process.xlsx
grafana/: grafana.pptx
hackathon/: README.md
iFrame/: iframe.md
introduction/: README.md
leadership/: leadership.odp
logs/: logs.odp  logs.pptx
memory/: memory.pptx
micro-frontend/: micro-frontend.odp
mongodb/: mongodb.pptx
next_js/: next_js.pptx
nexus/: nexus.odp
powerbi/: powerbi.pptx  pulse_os.pbix
python/: README.md  language.md  python.odp  python.pptx
python/_reference/environment/package_management/poetry/poetry_test/: pyproject.toml
python/_reference/environment/package_management/poetry/poetry_test/.commands/: A1_new.bat  A3_setup.bat  A4_venv_create.bat  A5A1_remove.bat  A5_add.bat  A6_install.bat  AA_clean.bat
requirements/: requirements.odp  requirements.pptx
value/: value.odp
(+1335 files in other folders)
