[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Evaristo Martins Figueiredo <1010836@gmail.com>"]
readme = "README.md"
packages = [{include = "test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
skunk-debug = "^0.1.0"
requests = "^2.32.3"


[[tool.poetry.source]]
name = "local"
url = "http://localhost:3141/cwprogram/stable/+simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
